# splash_flows

./: .env.example  404.html  Dockerfile  README.md  alcf_recon_flow_successful_runs.csv  all_flows_combined.csv  config.yml  create_deployments_7012.sh  flow_summary_table.tex  index.html  init_832_work_pools.sh  init_work_pools.py  init_work_pools.sh  login_to_globus_and_prefect.sh  login_to_prefect.sh  main.py  nersc_recon_flow_successful_runs.csv  new_file_832_successful_runs.csv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
about/: index.html
alcf832/: index.html
bl733/: index.html
configuration/: index.html
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: bl7011.md  bl733.md  bl931.md  configuration.md  dichroism.md  index.md
getting_started/: index.html
glossary/: index.html
install/: index.html
nersc832/: index.html
orchestration/: config.py  index.html  prefect.py  prune_controller.py  transfer_controller.py  transfer_endpoints.py
orchestration/_tests/: test_config.py  test_globus_flow.py  test_scicat.py  test_transfer_controller.py
orchestration/_tests/test_bl531/: test_move.py
orchestration/_tests/test_bl7011/: test_move.py
orchestration/_tests/test_bl733/: test_move.py
orchestration/_tests/test_bl931/: test_move.py
orchestration/_tests/test_dichroism/: test_move.py
orchestration/flows/bl531/: dispatcher.py  move.py  prefect.yaml
orchestration/flows/bl7011/: dispatcher.py  move.py  prefect.yaml
orchestration/flows/bl7012/: config.py
orchestration/flows/bl733/: config.py  (+3 more)
orchestration/globus/: transfer.py
scripts/: cancel_sfapi_job.py  check_globus_endpoint_sync.py  check_prefect_server_statuses.py  create_832_variable_blocks.py  index.html  restart_job.ipynb  restart_jobs.ipynb
scripts/perlmutter/: sfapi_reconstruction.py  sfapi_reconstruction_multinode.py  tiff_to_zarr.py
scripts/polaris/: globus_compute_recon_config.yaml  globus_compute_recon_config_multinode.yaml  globus_compute_segment_config.yaml  globus_compute_segment_config_multi_node.yaml  globus_compute_segment_config_single_node.yaml
search/: search_index.json
troubleshooting/: index.html
(+17 files in other folders)
